--- a/test.ipynb
+++ b/test.ipynb
@@ -12,17 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   fe1  fe2  fe5  faultFlag\n0    0   10   20          1\n1    1   11   21          2\n2    2   12   22          3\n3    3   13   23          5\n4    4   14   24          1\n5    5   15   25          2\n6    6   16   26          3\n7    7   17   27          5\n8    8   18   28          5\n9    9   19   29          3",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fe1</th>\n      <th>fe2</th>\n      <th>fe5</th>\n      <th>faultFlag</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>10</td>\n      <td>20</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>11</td>\n      <td>21</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>12</td>\n      <td>22</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>13</td>\n      <td>23</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>14</td>\n      <td>24</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>15</td>\n      <td>25</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>6</td>\n      <td>16</td>\n      <td>26</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>7</td>\n      <td>17</td>\n      <td>27</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>8</td>\n      <td>18</td>\n      <td>28</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>9</td>\n      <td>19</td>\n      <td>29</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.DefineData import *\n",
     "import pandas as pd\n",
@@ -33,8 +23,15 @@
     "    \"fe5\" : np.arange(20,30),\n",
     "    FAULT_FLAG : [1,2,3,5,1,2,3, 5, 5,3]\n",
     "}\n",
-    "testdf = pd.DataFrame(data=dictDF)\n",
-    "testdf"
+    "testdf1 = pd.DataFrame(data=dictDF)\n",
+    "\n",
+    "dictDF = {\n",
+    "    \"fe1\" : np.arange(1,11),\n",
+    "    \"fe2\" : np.arange(15,25),\n",
+    "    \"fe5\" : np.arange(30,40),\n",
+    "    FAULT_FLAG : [1,2,3,5,1,2,3, 5, 5,3]\n",
+    "}\n",
+    "testdf2 = pd.DataFrame(data=dictDF)"
    ],
    "metadata": {
     "collapsed": false,
@@ -61,43 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 5\n",
-      "[0, 1, 2, 3, 4]\n",
-      "fe1_min 0\n",
-      "5 10\n",
-      "[5, 6, 7, 8, 9]\n",
-      "fe1_min 5\n",
-      "0 5\n",
-      "[10, 11, 12, 13, 14]\n",
-      "fe2_min 10\n",
-      "5 10\n",
-      "[15, 16, 17, 18, 19]\n",
-      "fe2_min 15\n",
-      "0 5\n",
-      "[20, 21, 22, 23, 24]\n",
-      "fe5_min 20\n",
-      "5 10\n",
-      "[25, 26, 27, 28, 29]\n",
-      "fe5_min 25\n",
-      "***********featureExtraction************\n",
-      "   fe1_min  fe1_max\n",
-      "0        0        4\n",
-      "1        5        9\n",
-      "******************end*******************\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
     "import utils.DataFrameOperation\n",
-    "import utils.FeatureExtraction\n",
-    "from utils.DefineData import *\n",
-    "_ = utils.FeatureExtraction.featureExtraction(testdf, windowSize=5)"
+    "from utils.FeatureExtraction import *\n",
+    "from utils.FeatureSelection import *\n",
+    "from utils.DefineData import *\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -108,18 +75,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fe1': 0.9667464356809096, 'fe2': 0.005841778142694731, 'fe5': 4.8075337049514946e-06}\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1, flag = getPvalueFromTwoDataFrame(testdf1, testdf2)\n",
+    "print(d1)\n",
+    "print(flag)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "   fe1  fe2\n0    0   10\n1    1   11\n2    2   12\n3    3   13\n4    4   14\n5    5   15\n6    6   16\n7    7   17\n8    8   18\n9    9   19",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fe1</th>\n      <th>fe2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>14</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>6</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>7</td>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>8</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>9</td>\n      <td>19</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "({'fe5': 2.644143537723322e-05}, {'fe1': 1.0, 'fe2': 0.01606488989241051})"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "getFeatureNameByBenjamini_Yekutiel(d1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 2, 3, 2, 3, 4]"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3]\n",
+    "l2 = [2,3,4]\n",
+    "l1.extend(l2)\n",
+    "l1\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(    fe5  faultFlag\n 0    20          1\n 1    21          2\n 2    22          3\n 3    23          5\n 4    24          1\n 5    25          2\n 6    26          3\n 7    27          5\n 8    28          5\n 9    29          3\n 10   30          1\n 11   31          2\n 12   32          3\n 13   33          5\n 14   34          1\n 15   35          2\n 16   36          3\n 17   37          5\n 18   38          5\n 19   39          3,\n False)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from utils.FeatureSelection import *\n",
+    "\n",
+    "getUsefulFeatureFromAllDataFrames(testdf1, [testdf2])\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   fe1  fe2  fe5  faultFlag\n0    0   10   20          1\n1    1   11   21          2\n2    2   12   22          3\n3    3   13   23          5\n4    4   14   24          1\n5    5   15   25          2\n6    6   16   26          3\n7    7   17   27          5\n8    8   18   28          5\n9    9   19   29          3",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fe1</th>\n      <th>fe2</th>\n      <th>fe5</th>\n      <th>faultFlag</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>10</td>\n      <td>20</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>11</td>\n      <td>21</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>12</td>\n      <td>22</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>13</td>\n      <td>23</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>14</td>\n      <td>24</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>15</td>\n      <td>25</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>6</td>\n      <td>16</td>\n      <td>26</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>7</td>\n      <td>17</td>\n      <td>27</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>8</td>\n      <td>18</td>\n      <td>28</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>9</td>\n      <td>19</td>\n      <td>29</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testdf1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   fe1  fe2  fe5  faultFlag\n0    1   15   30          1\n1    2   16   31          2\n2    3   17   32          3\n3    4   18   33          5\n4    5   19   34          1\n5    6   20   35          2\n6    7   21   36          3\n7    8   22   37          5\n8    9   23   38          5\n9   10   24   39          3",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fe1</th>\n      <th>fe2</th>\n      <th>fe5</th>\n      <th>faultFlag</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>15</td>\n      <td>30</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>16</td>\n      <td>31</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>17</td>\n      <td>32</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>18</td>\n      <td>33</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>19</td>\n      <td>34</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>20</td>\n      <td>35</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>21</td>\n      <td>36</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>22</td>\n      <td>37</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>23</td>\n      <td>38</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>24</td>\n      <td>39</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testdf2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
