实现了一个输入-输出的全部流程

--- a/test.ipynb
+++ b/test.ipynb
@@ -299,7 +299,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "testdf2.shape\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
