将错误码相同的进行合并 修改准确率的bug
将series修改为list

get_metrics调用错误

修改了ModelTrain中全局变量的获取方式

添加globla标志

能够统计召回率、精确率等

能够让模型输出准确率等信息

修改步骤6.1中的文件路径错误

将错误码修改为10，20，30等数据

将特征值11，12，13等当作错误码10来进行

--- a/test.ipynb
+++ b/test.ipynb
@@ -200,6 +200,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "l1 = [4, 2, 1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 2, 4]"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(l1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
